--- a/MirageStudios/MirageStudios.html
+++ b/MirageStudios/MirageStudios.html
@@ -29,6 +29,18 @@
 <div class="mySlides" style="text-align: center;"><img src="MirageStudios10.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="MirageStudios11.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="MirageStudios12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MirageStudios13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MirageStudios14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MirageStudios15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MirageStudios16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MirageStudios17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MirageStudios18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MirageStudios19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MirageStudios20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MirageStudios21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MirageStudios22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MirageStudios23.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MirageStudios24.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -40,31 +52,30 @@ On October 21, 2009 it was announced that Viacom had purchased all of Mirage's r
 </p><p>
 Titles
 </p><p>
-<li>Bade Biker &amp; Orson (1986)
-<li>Bioneers (1994)
-<li>Casey Jones (1994)
-<li>Commandosaurs (1994)
-<li>Dino Island (1993)
-<li>Fugitoid (1985)
-<li>Gizmo (1986)
-<li>Gobbledygook (1986)
-<li>Grunts (1987)
-<li>Gutwallow
-<li>Hallowieners: Invasion of the Halloween Hot Dogs
-<li>Hero Sandwich
-<li>Melting Pot
-<li>Mirage Mini-Comics
-<li>Paleo
-<li>Planet Racers
-<li>Plastron Cafe
-<li>Prime Slime Tails
-<li>The Puma Blues
-<li>Rockola
-<li>Stupid Heroes
+<li><a href="MirageStudios2.jpg">Bade Biker &amp; Orson</a> (1986)
+<li><a href="MirageStudios3.jpg">Bioneers</a> (1994)
+<li><a href="MirageStudios4.jpg">Casey Jones</a> (1994)
+<li><a href="MirageStudios5.jpg">Commandosaurs</a> (1994)
+<li><a href="MirageStudios6.jpg">Dino Island</a> (1993)
+<li><a href="MirageStudios7.jpg">Fugitoid</a> (1985)
+<li><a href="MirageStudios8.jpg">Gizmo</a> (1986)
+<li><a href="MirageStudios11.jpg">Gizmo And The Fugitoid</a> (1989)
+<li><a href="MirageStudios9.jpg">Gobbledygook</a> (1986)
+<li><a href="MirageStudios12.jpg"> Green-Grey Sponge-Suit Sushi Turtles</a> (1990)
+<li><a href="MirageStudios10.jpg">Grunts</a> (1987)
+<li><a href="MirageStudios13.jpg">Mirage Mini-Comics</a> (1989)
+<li><a href="MirageStudios14.jpg">Plastron Cafe</a> (1992)
+<li><a href="MirageStudios15.jpg">Prime Slime Tails</a> (1986)
+<li><a href="MirageStudios16.jpg">The Puma Blues</a> (1988)
+<li><a href="MirageStudios17.jpg">Rockola</a> (1987)
+<li><a href="MirageStudios18.jpg">Savage Dragon / Teenage Mutant Ninja Turtles</a> (1993)
+<li><a href="MirageStudios19.jpg">Shell Shock</a> (1989)
+<li><a href="MirageStudios20.jpg">Space Usagi</a> (1992)
+<li><a href="MirageStudios21.jpg">Stupid Heros</a> (1994)
 <li><a href="../TMNT/TMNT.html">Teenage Mutant Ninja Turtles</a> (1984)
-<li>Usagi Yojimbo
-<li>Wild West C.O.W. Boys of Moo Mesa
-<li>Xenotech
+<li><a href="MirageStudios22.jpg">Turtle Soup</a> (1987)
+<li><a href="MirageStudios23.jpg">Usagi Yojimbo</a> (1993)
+<li><a href="MirageStudios24.jpg">Xenotech</a> (1994)
 </p>
 
 </body>
