--- a/RonCobb/RonCobb.html
+++ b/RonCobb/RonCobb.html
@@ -28,6 +28,35 @@
 <div class="mySlides" style="text-align: center;"><img src="RonCobb08.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="RonCobb09.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="RonCobb10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RonCobb11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RonCobb12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RonCobb13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RonCobb14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RonCobb15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RonCobb16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RonCobb17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RonCobb18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RonCobb19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RonCobb20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RonCobb21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RonCobb22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RonCobb23.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RonCobb24.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RonCobb25.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RonCobb26.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RonCobb27.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RonCobb28.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RonCobb29.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RonCobb30.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RonCobb31.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RonCobb32.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RonCobb33.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RonCobb34.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RonCobb35.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RonCobb36.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RonCobb37.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RonCobb38.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RonCobb39.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
