--- a/Tundra/Tundra.html
+++ b/Tundra/Tundra.html
@@ -49,6 +49,7 @@
 <div class="mySlides" style="text-align: center;"><img src="Tundra29.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Tundra30.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Tundra31.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Tundra32.jpg"></div>
 
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -86,6 +87,7 @@ Titles
 <li><a href="Tundra21.jpg">Rain</a> (1993)
 <li><a href="Tundra22.jpg">Scorched Earth</a> (1991)
 <li><a href="Tundra23.jpg">Silicon Horizon</a> (1992)
+<li><a href="Tundra32.jpg">Skull Farmer</a> (1991)
 <li><a href="Tundra24.jpg">Tantalizing Stories </a> (1992)
 <li><a href="Tundra25.jpg">Tantalizing Stories Presents Frank in the River </a> (1992)
 <li><a href="Tundra26.jpg">Teenage Mutant Ninja Turtles</a> (1991)
