--- a/index.html
+++ b/index.html
@@ -8307,6 +8307,13 @@
 </tr>
 
 <tr>
+<td>Bade Biker &amp; Orson</td>
+<td>1986</td>
+<td>Mirage</td>
+<td><a href="MirageStudios/MirageStudios.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Badderdude</td>
 <td>1996</td>
 <td>FantaCo</td>
@@ -10430,6 +10437,13 @@
 <td>1972</td>
 <td>Last Gasp</td>
 <td><a href="LastGasp/LastGasp.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Bioneers</td>
+<td>1994</td>
+<td>Mirage</td>
+<td><a href="MirageStudios/MirageStudios.html">Details</a></td>
 </tr>
 
 <tr>
@@ -14073,7 +14087,7 @@
 </tr>
 
 <tr>
-<td>Cannibal Romances</td>
+<td>Cannibal Romance</td>
 <td>1986</td>
 <td>Last Gasp</td>
 <td><a href="LastGasp/LastGasp.html">Details</a></td>
@@ -14896,6 +14910,13 @@
 <td>1986</td>
 <td>Renegade</td>
 <td><a href="RenegadePress/RenegadePress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Casey Jones</td>
+<td>1994</td>
+<td>Mirage</td>
+<td><a href="MirageStudios/MirageStudios.html">Details</a></td>
 </tr>
 
 <tr>
@@ -17525,6 +17546,13 @@
 <td>1957</td>
 <td>Atlas</td>
 <td><a href="CommandoAdventures/CommandoAdventures.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Commandosaurs</td>
+<td>1994</td>
+<td>Mirage</td>
+<td><a href="MirageStudios/MirageStudios.html">Details</a></td>
 </tr>
 
 <tr>
@@ -22207,6 +22235,13 @@
 <td>1973</td>
 <td>Charlton</td>
 <td><a href="Charlton/Charlton.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dino Island</td>
+<td>1993</td>
+<td>Mirage</td>
+<td><a href="MirageStudios/MirageStudios.html">Details</a></td>
 </tr>
 
 <tr>
@@ -29458,6 +29493,13 @@
 </tr>
 
 <tr>
+<td>Fugitoid</td>
+<td>1985</td>
+<td>Mirage</td>
+<td><a href="MirageStudios/MirageStudios.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Fukitor</td>
 <td>2017</td>
 <td>FU Press</td>
@@ -31306,6 +31348,20 @@
 </tr>
 
 <tr>
+<td>Gizmo</td>
+<td>1986</td>
+<td>Mirage</td>
+<td><a href="MirageStudios/MirageStudios.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Gizmo And The Fugitoid</td>
+<td>1989</td>
+<td>Mirage</td>
+<td><a href="MirageStudios/MirageStudios.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Gladstone's School For World Conquerors</td>
 <td>2011</td>
 <td>Image</td>
@@ -31422,6 +31478,13 @@
 <td>1989</td>
 <td>Caliber</td>
 <td><a href="CaliberComics/CaliberComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Gobbledygook</td>
+<td>1986</td>
+<td>Mirage</td>
+<td><a href="MirageStudios/MirageStudios.html">Details</a></td>
 </tr>
 
 <tr>
@@ -32258,6 +32321,13 @@
 </tr>
 
 <tr>
+<td>Green-Grey Sponge-Suit Sushi Turtles</td>
+<td>1990</td>
+<td>Mirage</td>
+<td><a href="MirageStudios/MirageStudios.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Greenhouse Warriors</td>
 <td>1992</td>
 <td>Tundra</td>
@@ -32573,17 +32643,24 @@
 </tr>
 
 <tr>
-<td>Grunts</td>
-<td>2006</td>
-<td>Arcana</td>
-<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
-</tr>
-
-<tr>
 <td>Grumpy Old Monsters</td>
 <td>2003</td>
 <td>IDW</td>
 <td><a href="IDW/IDW.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Grunts</td>
+<td>1987</td>
+<td>Mirage</td>
+<td><a href="MirageStudios/MirageStudios.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Grunts</td>
+<td>2006</td>
+<td>Arcana</td>
+<td><a href="ArcanaComics/ArcanaComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -46381,6 +46458,13 @@
 </tr>
 
 <tr>
+<td>Mirage Mini-Comics</td>
+<td>1989</td>
+<td>Mirage</td>
+<td><a href="MirageStudios/MirageStudios.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Mirage Studios</td>
 <td>1983</td>
 <td>Publisher</td>
@@ -52586,6 +52670,13 @@
 </tr>
 
 <tr>
+<td>Plastron Cafe</td>
+<td>1992</td>
+<td>Mirage</td>
+<td><a href="MirageStudios/MirageStudios.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Playboy</td>
 <td>1992</td>
 <td>Drawn &amp; Quarterly</td>
@@ -53383,6 +53474,13 @@
 </tr>
 
 <tr>
+<td>Prime Slime Tails</td>
+<td>1986</td>
+<td>Mirage</td>
+<td><a href="MirageStudios/MirageStudios.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Primer</td>
 <td>1982</td>
 <td>Comico</td>
@@ -53862,6 +53960,13 @@
 <td>1986</td>
 <td>Aardvark-Vanaheim</td>
 <td><a href="AardvarkVanaheim/AardvarkVanaheim.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Puma Blues</td>
+<td>1988</td>
+<td>Mirage</td>
+<td><a href="MirageStudios/MirageStudios.html">Details</a></td>
 </tr>
 
 <tr>
@@ -56362,6 +56467,13 @@
 </tr>
 
 <tr>
+<td>Rockola</td>
+<td>1987</td>
+<td>Mirage</td>
+<td><a href="MirageStudios/MirageStudios.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Rocky Horror Picture Show</td>
 <td>1990</td>
 <td>Caliber</td>
@@ -57435,6 +57547,13 @@
 <td>1992</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Savage Dragon / Teenage Mutant Ninja Turtles </td>
+<td>1993</td>
+<td>Mirage</td>
+<td><a href="MirageStudios/MirageStudios.html">Details</a></td>
 </tr>
 
 <tr>
@@ -59061,6 +59180,13 @@
 </tr>
 
 <tr>
+<td>Shell Shock</td>
+<td>1989</td>
+<td>Mirage</td>
+<td><a href="MirageStudios/MirageStudios.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Shenanigans</td>
 <td>2007</td>
 <td>Oni</td>
@@ -59987,6 +60113,13 @@
 <td>1970</td>
 <td>Last Gasp</td>
 <td><a href="LastGasp/LastGasp.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Skull Farmer</td>
+<td>1991</td>
+<td>Tundra</td>
+<td><a href="Tundra/Tundra.html">Details</a></td>
 </tr>
 
 <tr>
@@ -60932,6 +61065,13 @@
 <td>1954</td>
 <td>Avon</td>
 <td><a href="Avon/Avon.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Space Usagi</td>
+<td>1992</td>
+<td>Mirage</td>
+<td><a href="MirageStudios/MirageStudios.html">Details</a></td>
 </tr>
 
 <tr>
@@ -63046,6 +63186,13 @@
 <td>1946</td>
 <td>Harvey</td>
 <td><a href="HarveyComics/HarveyComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Stupid Heroes</td>
+<td>1994</td>
+<td>Mirage</td>
+<td><a href="MirageStudios/MirageStudios.html">Details</a></td>
 </tr>
 
 <tr>
@@ -66573,6 +66720,13 @@
 </tr>
 
 <tr>
+<td>Turtle Soup</td>
+<td>1987</td>
+<td>Mirage</td>
+<td><a href="MirageStudios/MirageStudios.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Tweety And Sylvester</td>
 <td>1963</td>
 <td>Gold Key</td>
@@ -67655,6 +67809,13 @@
 <td>1987</td>
 <td>Fantagraphics</td>
 <td><a href="Fantagraphics/Fantagraphics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Usagi Yojimbo</td>
+<td>1993</td>
+<td>Mirage</td>
+<td><a href="MirageStudios/MirageStudios.html">Details</a></td>
 </tr>
 
 <tr>
@@ -71811,6 +71972,13 @@
 <td>1987</td>
 <td>Blackthorne</td>
 <td><a href="Blackthorne/Blackthorne.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Xenotech</td>
+<td>1994</td>
+<td>Mirage</td>
+<td><a href="MirageStudios/MirageStudios.html">Details</a></td>
 </tr>
 
 <tr>
