--- a/index.html
+++ b/index.html
@@ -50467,6 +50467,13 @@
 </tr>
 
 <tr>
+<td>Omega Knights</td>
+<td>1991</td>
+<td>Underground</td>
+<td><a href="OmegaKnights/OmegaKnights.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Omega Men</td>
 <td>1983</td>
 <td>DC</td>
