--- a/index.html
+++ b/index.html
@@ -10321,6 +10321,13 @@
 </tr>
 
 <tr>
+<td>Biohazard</td>
+<td>1990</td>
+<td>Omni</td>
+<td><a href="Biohazard/Biohazard.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Bionic Man</td>
 <td>2011</td>
 <td>Dynamite</td>
