--- a/index.html
+++ b/index.html
@@ -877,6 +877,13 @@
 </tr>
 
 <tr>
+<td>666</td>
+<td>1990</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
+</tr>
+
+<tr>
 <td>777: The Wrath</td>
 <td>1998</td>
 <td>Avatar</td>
@@ -965,6 +972,20 @@
 <td>1977</td>
 <td>IPC</td>
 <td><a href="2000AD/2000AD.html">Details</a></td>
+</tr>
+
+<tr>
+<td>2000 A.D. Presents</td>
+<td>1987</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
+</tr>
+
+<tr>
+<td>2000 A.D. Showcase</td>
+<td>1987</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
 </tr>
 
 <tr>
@@ -28090,6 +28111,13 @@
 <td>1955</td>
 <td>Harvey</td>
 <td><a href="HarveyComics/HarveyComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Fleetway Quality</td>
+<td>1987</td>
+<td>Publisher</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
 </tr>
 
 <tr>
