--- a/index.html
+++ b/index.html
@@ -779,6 +779,13 @@
 </tr>
 
 <tr>
+<td>93 Vampire Bikini Comic Calendar</td>
+<td>1993</td>
+<td>Acid Rain</td>
+<td><a href="AcidRainStudios/AcidRainStudios.html">Details</a></td>
+</tr>
+
+<tr>
 <td>99 Days</td>
 <td>2009</td>
 <td>Vertigo</td>
@@ -968,7 +975,7 @@
 </tr>
 
 <tr>
-<td>2000 AD</td>
+<td>2000 A.D.</td>
 <td>1977</td>
 <td>IPC</td>
 <td><a href="2000AD/2000AD.html">Details</a></td>
@@ -1224,6 +1231,20 @@
 <td>2005</td>
 <td>Publisher</td>
 <td><a href="AWaveBlueWorld/AWaveBlueWorld.html">Details</a></td>
+</tr>
+
+<tr>
+<td>A.B.C. Warriors</td>
+<td>1990</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
+</tr>
+
+<tr>
+<td>A.B.C. Warriors: Khronicales Of Khaos</td>
+<td>1993</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
 </tr>
 
 <tr>
@@ -1794,6 +1815,13 @@
 <td>1994</td>
 <td>Knockabout</td>
 <td><a href="Knockabout/Knockabout.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Acid Rain Studios</td>
+<td>1991</td>
+<td>Publisher</td>
+<td><a href="AcidRainStudios/AcidRainStudios.html">Details</a></td>
 </tr>
 
 <tr>
@@ -6236,6 +6264,13 @@
 </tr>
 
 <tr>
+<td>Argon The Savage</td>
+<td>1991</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Argonauts</td>
 <td>1988</td>
 <td>Eternity</td>
@@ -6319,6 +6354,13 @@
 </tr>
 
 <tr>
+<td>Armitage</td>
+<td>1993</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Armor</td>
 <td>1985</td>
 <td>Continuity</td>
@@ -6351,6 +6393,13 @@
 <td>2017</td>
 <td>Boom!</td>
 <td><a href="Boom!/Boom!.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Armoured Gideon</td>
+<td>1991</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
 </tr>
 
 <tr>
@@ -8164,6 +8213,13 @@
 <td>1999</td>
 <td>Oni</td>
 <td><a href="OniPress/OniPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Bad Company</td>
+<td>1988</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
 </tr>
 
 <tr>
@@ -13115,6 +13171,13 @@
 </tr>
 
 <tr>
+<td>Brit-Cit Babes</td>
+<td>1993</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Britannia</td>
 <td>2016</td>
 <td>Valiant</td>
@@ -16130,10 +16193,24 @@
 </tr>
 
 <tr>
+<td>Chopper: Earth, Wind &amp; Fire</td>
+<td>1993</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Chrononauts</td>
 <td>2015</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Chronos Carnival</td>
+<td>1991</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
 </tr>
 
 <tr>
@@ -16752,6 +16829,13 @@
 </tr>
 
 <tr>
+<td>Clown: Nobody's Laughing Now</td>
+<td>1993</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Cluster</td>
 <td>2015</td>
 <td>Boom!</td>
@@ -17315,6 +17399,13 @@
 <td>1993</td>
 <td>Dark Horse</td>
 <td><a href="ComicsGreatestWorld/ComicsGreatestWorld.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Comics International</td>
+<td>1993</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
 </tr>
 
 <tr>
@@ -19180,6 +19271,13 @@
 </tr>
 
 <tr>
+<td>Cybercrush: Robots In Revolt</td>
+<td>1991</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Cyberforce</td>
 <td>2012</td>
 <td>Image</td>
@@ -19675,6 +19773,13 @@
 <td>2012</td>
 <td>Knockabout</td>
 <td><a href="Knockabout/Knockabout.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dare The Impossible</td>
+<td>1991</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
 </tr>
 
 <tr>
@@ -20615,6 +20720,13 @@
 </tr>
 
 <tr>
+<td>Dead Meat</td>
+<td>1993</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Dead Men Tell No Tales</td>
 <td>2005</td>
 <td>Arcana</td>
@@ -21392,6 +21504,13 @@
 </tr>
 
 <tr>
+<td>Demon Baby</td>
+<td>1997</td>
+<td>666</td>
+<td><a href="DemonBaby/DemonBaby.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Demon Cleaner</td>
 <td>2009</td>
 <td>Antarctic Press</td>
@@ -22025,6 +22144,20 @@
 <td>1989</td>
 <td>Marvel</td>
 <td><a href="DinoRiders/DinoRiders.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dinosaur Bikini</td>
+<td>1993</td>
+<td>Acid Rain</td>
+<td><a href="AcidRainStudios/AcidRainStudios.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dinosaurs And Prehistoric Predators</td>
+<td>2011</td>
+<td>Zenescope</td>
+<td><a href="Zenescope/Zenescope.html">Details</a></td>
 </tr>
 
 <tr>
@@ -23753,6 +23886,20 @@
 <td>2010</td>
 <td>Ape</td>
 <td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dredd By Bisley</td>
+<td>1993</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dredd Rules!</td>
+<td>1991</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
 </tr>
 
 <tr>
@@ -27702,6 +27849,13 @@
 </tr>
 
 <tr>
+<td>Finn</td>
+<td>1993</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Fire Man</td>
 <td>1997</td>
 <td>Image</td>
@@ -28125,6 +28279,13 @@
 <td>1929</td>
 <td>Publisher</td>
 <td><a href="MaxFleischer/MaxFleischer.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Flesh</td>
+<td>1991</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
 </tr>
 
 <tr>
@@ -32754,6 +32915,13 @@
 </tr>
 
 <tr>
+<td>Halo Jones</td>
+<td>1987</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Halo: Escalation</td>
 <td>2013</td>
 <td>Dark Horse</td>
@@ -33216,10 +33384,10 @@
 </tr>
 
 <tr>
-<td>Harley Quinn</td>
-<td>2016</td>
-<td>DC</td>
-<td><a href="DCComics/DCComics.html">Details</a></td>
+<td>Harlem Heroes</td>
+<td>1992</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
 </tr>
 
 <tr>
@@ -33227,6 +33395,13 @@
 <td>2001</td>
 <td>Dark Horse</td>
 <td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Harley Quinn</td>
+<td>2016</td>
+<td>DC</td>
+<td><a href="DCComics/DCComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -35285,6 +35460,13 @@
 <td>1961</td>
 <td>Charlton</td>
 <td><a href="Charlton/Charlton.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Hunt For Black Widow</td>
+<td>1993</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
 </tr>
 
 <tr>
@@ -38194,9 +38376,30 @@
 
 <tr>
 <td>Judge Dredd</td>
+<td>1987</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Judge Dredd</td>
 <td>2012</td>
 <td>IDW</td>
 <td><a href="IDW/IDW.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Judge Dredd Classics</td>
+<td>1991</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Judge Dredd The Megazine</td>
+<td>1991</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
 </tr>
 
 <tr>
@@ -38204,6 +38407,34 @@
 <td>2013</td>
 <td>Dark Horse</td>
 <td><a href="JudgeDreddAliens/JudgeDreddAliens.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Judge Dredd's Crime File</td>
+<td>1989</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Judge Dredd's Hardcase Papers</td>
+<td>1991</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Judge Dredd: America</td>
+<td>1993</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Judge Dredd: Emerald Isle</td>
+<td>1991</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
 </tr>
 
 <tr>
@@ -38477,6 +38708,13 @@
 <td>1997</td>
 <td>Vertigo</td>
 <td><a href="Vertigo/Vertigo.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Junker</td>
+<td>1993</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
 </tr>
 
 <tr>
@@ -40706,6 +40944,13 @@
 </tr>
 
 <tr>
+<td>Law Of Dredd</td>
+<td>1988</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Lawbreakers Always Lose!</td>
 <td>1948</td>
 <td>Atlas</td>
@@ -42022,6 +42267,13 @@
 </tr>
 
 <tr>
+<td>Loner</td>
+<td>1990</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Lonesome Go</td>
 <td>2008</td>
 <td>Fantagraphics</td>
@@ -42733,6 +42985,13 @@
 <td>1990</td>
 <td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>M.A.C.H. 1</td>
+<td>1991</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
 </tr>
 
 <tr>
@@ -44431,6 +44690,13 @@
 </tr>
 
 <tr>
+<td>Max Brewster: Universal Soldier</td>
+<td>1993</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Max Fleischer</td>
 <td>1883</td>
 <td>Creator</td>
@@ -44567,6 +44833,13 @@
 <td>1988</td>
 <td>First Comics</td>
 <td><a href="FirstComics/FirstComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Mean Machine</td>
+<td>1993</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
 </tr>
 
 <tr>
@@ -47717,6 +47990,13 @@
 </tr>
 
 <tr>
+<td>Naked Fangs</td>
+<td>1993</td>
+<td>Acid Rain</td>
+<td><a href="AcidRainStudios/AcidRainStudios.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Nam</td>
 <td>1986</td>
 <td>Marvel</td>
@@ -48004,6 +48284,13 @@
 </tr>
 
 <tr>
+<td>Necropolis: The Judge Death Invasion</td>
+<td>1991</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Necrotica</td>
 <td>1994</td>
 <td>Fathom</td>
@@ -48126,6 +48413,13 @@
 <td>2010</td>
 <td>Icon</td>
 <td><a href="IconComics/IconComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Nemesis The Warlock</td>
+<td>1989</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
 </tr>
 
 <tr>
@@ -48364,6 +48658,13 @@
 <td>2016</td>
 <td>Vertigo</td>
 <td><a href="NewRomancer/NewRomancer.html">Details</a></td>
+</tr>
+
+<tr>
+<td>New Statesmen</td>
+<td>1989</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
 </tr>
 
 <tr>
@@ -48787,10 +49088,24 @@
 </tr>
 
 <tr>
+<td>Night Walker</td>
+<td>1993</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Night World</td>
 <td>2014</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Night Zero</td>
+<td>1990</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
 </tr>
 
 <tr>
@@ -50726,6 +51041,13 @@
 </tr>
 
 <tr>
+<td>Pandora Pill</td>
+<td>1992</td>
+<td>Acid Rain</td>
+<td><a href="AcidRainStudios/AcidRainStudios.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Pandora Pinup</td>
 <td>1997</td>
 <td>Avatar</td>
@@ -52487,6 +52809,13 @@
 </tr>
 
 <tr>
+<td>Post Alien Earth Chronicles Featuring Damlog The Assassinator</td>
+<td>1993</td>
+<td>Acid Rain</td>
+<td><a href="AcidRainStudios/AcidRainStudios.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Post-Mortem</td>
 <td>1991</td>
 <td>Brave New Words</td>
@@ -53176,6 +53505,27 @@
 <td>1986</td>
 <td>Marvel</td>
 <td><a href="PsiForce/PsiForce.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Psi-Judge Anderson</td>
+<td>1989</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Psi-Judge Anderson: Engrams</td>
+<td>1993</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Psi-Judge Anderson: Psi-Files</td>
+<td>1993</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
 </tr>
 
 <tr>
@@ -53886,6 +54236,13 @@
 </tr>
 
 <tr>
+<td>Raptaur</td>
+<td>1993</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Rapture</td>
 <td>2017</td>
 <td>Valiant</td>
@@ -54281,6 +54638,13 @@
 <td>1940</td>
 <td>Timely</td>
 <td><a href="RedRaven/RedRaven.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Red Razors</td>
+<td>1993</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
 </tr>
 
 <tr>
@@ -55810,9 +56174,23 @@
 
 <tr>
 <td>Rogue Trooper</td>
+<td>1987</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Rogue Trooper</td>
 <td>2014</td>
 <td>IDW</td>
 <td><a href="IDW/IDW.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Rogue Trooper: The Final Warrior</td>
+<td>1992</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
 </tr>
 
 <tr>
@@ -56563,6 +56941,13 @@
 </tr>
 
 <tr>
+<td>Sam Slade, RoboHunter</td>
+<td>1987</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Sam's Strip</td>
 <td>2009</td>
 <td>Fantagraphics</td>
@@ -56986,6 +57371,13 @@
 <td>1998</td>
 <td>Dark Horse</td>
 <td><a href="Scatterbrain/Scatterbrain.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Scavengers</td>
+<td>1988</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
 </tr>
 
 <tr>
@@ -59262,6 +59654,13 @@
 </tr>
 
 <tr>
+<td>Skizz: First Encounter</td>
+<td>1993</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Skrog</td>
 <td>1983</td>
 <td>Comico</td>
@@ -59441,6 +59840,27 @@
 <td>1988</td>
 <td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Slaine The Berserker</td>
+<td>1987</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Slaine The King</td>
+<td>1989</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Slaine: The Horned God</td>
+<td>1993</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
 </tr>
 
 <tr>
@@ -60449,6 +60869,13 @@
 <td>2010</td>
 <td>Oni</td>
 <td><a href="OniPress/OniPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Spellbinders</td>
+<td>1987</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
 </tr>
 
 <tr>
@@ -62255,6 +62682,20 @@
 <td>1989</td>
 <td>Rip Off</td>
 <td><a href="RipOffPress/RipOffPress.html">Details</a>
+</tr>
+
+<tr>
+<td>Strontium Bitch</td>
+<td>1993</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Strontium Dog</td>
+<td>1987</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
 </tr>
 
 <tr>
@@ -64504,6 +64945,13 @@
 </tr>
 
 <tr>
+<td>Time Killers</td>
+<td>1992</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Time Machine</td>
 <td>1990</td>
 <td>Eternity</td>
@@ -64522,6 +64970,13 @@
 <td>1986</td>
 <td>Rip Off</td>
 <td><a href="RipOffPress/RipOffPress.html">Details</a>
+</tr>
+
+<tr>
+<td>Time Twisters</td>
+<td>1987</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
 </tr>
 
 <tr>
@@ -65285,6 +65740,13 @@
 </tr>
 
 <tr>
+<td>Trash</td>
+<td>1993</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Trashed</td>
 <td>2015</td>
 <td>Abrams</td>
@@ -65677,6 +66139,13 @@
 </tr>
 
 <tr>
+<td>Turbo Jones: Pathfinder</td>
+<td>1991</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Turf</td>
 <td>2010</td>
 <td>Image</td>
@@ -65912,6 +66381,13 @@
 <td>1995</td>
 <td>Marvel</td>
 <td><a href="Typhoid/Typhoid.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Tyranny Rex</td>
+<td>1991</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
 </tr>
 
 <tr>
@@ -67056,10 +67532,45 @@
 </tr>
 
 <tr>
+<td>Vampire Swimsuit Illustrated</td>
+<td>1993</td>
+<td>Acid Rain</td>
+<td><a href="AcidRainStudios/AcidRainStudios.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Vampire Tales</td>
 <td>1973</td>
 <td>Marvel</td>
 <td><a href="VampireTales/VampireTales.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Vampire Vixens</td>
+<td>1993</td>
+<td>Acid Rain</td>
+<td><a href="AcidRainStudios/AcidRainStudios.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Vampire World</td>
+<td>1993</td>
+<td>Acid Rain</td>
+<td><a href="AcidRainStudios/AcidRainStudios.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Vampire's Prank</td>
+<td>1994</td>
+<td>Acid Rain</td>
+<td><a href="AcidRainStudios/AcidRainStudios.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Vampire's Promise</td>
+<td>1994</td>
+<td>Acid Rain</td>
+<td><a href="AcidRainStudios/AcidRainStudios.html">Details</a></td>
 </tr>
 
 <tr>
@@ -67249,6 +67760,13 @@
 <td>1993</td>
 <td>FantaCo</td>
 <td><a href="FantaCoEnterprises/FantaCoEnterprises.html">Details</a></td> 
+</tr>
+
+<tr>
+<td>VC's</td>
+<td>1991</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
 </tr>
 
 <tr>
@@ -68664,6 +69182,13 @@
 </tr>
 
 <tr>
+<td>Warriors</td>
+<td>1991</td>
+<td>Acid Rain</td>
+<td><a href="AcidRainStudios/AcidRainStudios.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Warriors Of Mars</td>
 <td>2012</td>
 <td>Dynamite</td>
@@ -70008,6 +70533,13 @@
 </tr>
 
 <tr>
+<td>Wireheads</td>
+<td>1993</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Witch</td>
 <td>1989</td>
 <td>Eternity</td>
@@ -70229,6 +70761,13 @@
 <td>1949</td>
 <td>Fox Comics</td>
 <td><a href="FoxPublications/FoxPublications.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Women Of The Rain Forest</td>
+<td>1993</td>
+<td>Acid Rain</td>
+<td><a href="AcidRainStudios/AcidRainStudios.html">Details</a></td>
 </tr>
 
 <tr>
@@ -71092,6 +71631,13 @@
 </tr>
 
 <tr>
+<td>Young Death</td>
+<td>1992</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Young Eagle</td>
 <td>1950</td>
 <td>Fawcett</td>
@@ -71334,6 +71880,27 @@
 <td>1948</td>
 <td>Fox Comics</td>
 <td><a href="FoxPublications/FoxPublications.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Zenescope Entertainment</td>
+<td>2005</td>
+<td>Publisher</td>
+<td><a href="Zenescope/Zenescope.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Zenith Phase I</td>
+<td>1992</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Zenith Phase II</td>
+<td>1993</td>
+<td>Fleetway Quality</td>
+<td><a href="FleetwayQuality/FleetwayQuality.html">Details</a></td>
 </tr>
 
 <tr>
