--- a/SiriusEntertainment/SiriusEntertainment.html
+++ b/SiriusEntertainment/SiriusEntertainment.html
@@ -104,7 +104,7 @@
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Sirius Entertainment was an American comic book company which celebrated 15 years of publishing in 2009. Sirius has published popular titles such as Dawn, Poison Elves, Akiko, and Mark Smylie's epic fantasy Artesia series during its first years. 
+Sirius Entertainment was an American comic book company since 1994. Sirius has published popular titles such as Dawn, Poison Elves, Akiko, and Mark Smylie's epic fantasy Artesia series during its first years. 
 </p><p>
 Titles
 </p><p>
