Acid Rain Studios

--- a/index.html
+++ b/index.html
@@ -1839,6 +1839,13 @@
 </tr>
 
 <tr>
+<td>Acid Rain Studios</td>
+<td>1991</td>
+<td>Publisher</td>
+<td><a href="AcidRainStudios/AcidRainStudios.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Acidboy</td>
 <td>1996</td>
 <td>Starhead</td>
