--- a/index.html
+++ b/index.html
@@ -779,6 +779,13 @@
 </tr>
 
 <tr>
+<td>93 Vampire Bikini Comic Calendar</td>
+<td>1993</td>
+<td>Acid Rain</td>
+<td><a href="AcidRainStudios/AcidRainStudios.html">Details</a></td>
+</tr>
+
+<tr>
 <td>99 Days</td>
 <td>2009</td>
 <td>Vertigo</td>
@@ -22382,6 +22389,13 @@
 <td>1989</td>
 <td>Marvel</td>
 <td><a href="DinoRiders/DinoRiders.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dinosaur Bikini</td>
+<td>1993</td>
+<td>Acid Rain</td>
+<td><a href="AcidRainStudios/AcidRainStudios.html">Details</a></td>
 </tr>
 
 <tr>
@@ -48605,6 +48619,13 @@
 </tr>
 
 <tr>
+<td>Naked Fangs</td>
+<td>1993</td>
+<td>Acid Rain</td>
+<td><a href="AcidRainStudios/AcidRainStudios.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Nam</td>
 <td>1986</td>
 <td>Marvel</td>
@@ -51684,6 +51705,13 @@
 </tr>
 
 <tr>
+<td>Pandora Pill</td>
+<td>1992</td>
+<td>Acid Rain</td>
+<td><a href="AcidRainStudios/AcidRainStudios.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Pandora Pinup</td>
 <td>1997</td>
 <td>Avatar</td>
@@ -53470,6 +53498,13 @@
 <td>1987</td>
 <td>Blackthorne</td>
 <td><a href="Blackthorne/Blackthorne.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Post Alien Earth Chronicles Featuring Damlog The Assassinator</td>
+<td>1993</td>
+<td>Acid Rain</td>
+<td><a href="AcidRainStudios/AcidRainStudios.html">Details</a></td>
 </tr>
 
 <tr>
@@ -68616,10 +68651,45 @@
 </tr>
 
 <tr>
+<td>Vampire Swimsuit Illustrated</td>
+<td>1993</td>
+<td>Acid Rain</td>
+<td><a href="AcidRainStudios/AcidRainStudios.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Vampire Tales</td>
 <td>1973</td>
 <td>Marvel</td>
 <td><a href="VampireTales/VampireTales.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Vampire Vixens</td>
+<td>1993</td>
+<td>Acid Rain</td>
+<td><a href="AcidRainStudios/AcidRainStudios.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Vampire World</td>
+<td>1993</td>
+<td>Acid Rain</td>
+<td><a href="AcidRainStudios/AcidRainStudios.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Vampire's Prank</td>
+<td>1994</td>
+<td>Acid Rain</td>
+<td><a href="AcidRainStudios/AcidRainStudios.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Vampire's Promise</td>
+<td>1994</td>
+<td>Acid Rain</td>
+<td><a href="AcidRainStudios/AcidRainStudios.html">Details</a></td>
 </tr>
 
 <tr>
@@ -70308,6 +70378,13 @@
 </tr>
 
 <tr>
+<td>Warriors</td>
+<td>1991</td>
+<td>Acid Rain</td>
+<td><a href="AcidRainStudios/AcidRainStudios.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Warriors Of Mars</td>
 <td>2012</td>
 <td>Dynamite</td>
@@ -71922,6 +71999,13 @@
 <td>1949</td>
 <td>Fox Comics</td>
 <td><a href="FoxPublications/FoxPublications.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Women Of The Rain Forest</td>
+<td>1993</td>
+<td>Acid Rain</td>
+<td><a href="AcidRainStudios/AcidRainStudios.html">Details</a></td>
 </tr>
 
 <tr>
